Opened 14 years ago

Closed 14 years ago

#1671 closed defect (fixed)

ffmpeg crashed using filter 'volume'

Reported by: Frank Haefemeier Owned by:
Priority: important Component: undetermined
Version: 0.11.1 Keywords: crash
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Transcode (downmix and normalize) an AC3 5.1 audio file to AAC stereo using the volume filter with value > 1. Without the filter or volume=1 the transcoding works fine.
How to reproduce:

% ffmpeg -i volumetest.ac3 -filter:a volume=2 -ac 2 test-norm.aac
ffmpeg version 0.11.1 Copyright (c) 2000-2012 the FFmpeg developers
  built on Aug  9 2012 19:51:02 with gcc 4.7.0 20120507 (Red Hat 4.7.0-5)

Attachments (2)

debug.out (17.0 KB ) - added by Frank Haefemeier 14 years ago.
Console output
volumetest.ac3 (271.2 KB ) - added by Frank Haefemeier 14 years ago.
Sample audio file

Download all attachments as: .zip

Change History (9)

by Frank Haefemeier, 14 years ago

Attachment: debug.out added

Console output

by Frank Haefemeier, 14 years ago

Attachment: volumetest.ac3 added

Sample audio file

comment:1 by Stefano Sabatini, 14 years ago

Status: newopen

Can't reproduce here, can you try with latest version?

Also if you could disable optimizations and --enable-debug, that would provide more useful info in the backtrace.

comment:2 by Cigaes, 14 years ago

I could reproduce with n0.11.1 but not with git head, on x86_64/Debian.

in reply to:  2 comment:3 by Frank Haefemeier, 14 years ago

I cannot reproduce with GIT head. For me the ticket can be closed, I will use the head version instead.

comment:4 by Carl Eugen Hoyos, 14 years ago

Priority: normalimportant
Reproduced by developer: set

The original crash was fixed in the merge commit 16e25ef.

comment:5 by Carl Eugen Hoyos, 14 years ago

Component: FFmpegundetermined
Keywords: crash added

comment:6 by Michael Niedermayer, 14 years ago

is this reproduceable with 0.11.2 ?

comment:7 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

Fixed by Nicolas George in 05e64b5 (and 0.11.2).

Note: See TracTickets for help on using tickets.